# NetworkSolutionKirsch

./: CMakeLists.txt  KirchCourse.ipynb  README.md  Tex
assets/: test_input_params.npy
gendata/: gendata.hpp  gendata.tpp  main.cpp
